<?xml version="1.0"?>
<package format="3">
  <name>rs03_current_torque_control</name>
  <version>0.1.0</version>
  <description>Safe RS03 current and direct torque command node using the official private CAN protocol.</description>
  <maintainer email="user@example.com">RS03 user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
